carina-cli/src/snapshots/carina_cli__plan_snapshot_tests__snapshot_map_field_string_list_grew.snap
---
source: carina-cli/src/plan_snapshot_tests.rs
expression: output
---
Execution Plan:

  ~ awscc.iam.RolePolicy policy
      statement:
        ~ {
            principal:
                aws:
                  + "arn:aws:iam::412038850359:role/aws-reserved/sso.amazonaws.com/ap-northeast-1/AWSReservedSSO_AdministratorAccess_1ade6440f2d3bcdd"
                  # (1 unchanged element hidden)
            # (4 unchanged fields hidden)
          }
      # (2 unchanged attributes hidden)

Plan: 0 to add, 1 to change, 0 to destroy.
