carina-cli/src/snapshots/carina_cli__plan_snapshot_tests__snapshot_map_key_diff.snap
---
source: carina-cli/src/plan_snapshot_tests.rs
expression: output
---
Execution Plan:

  ~ awscc.ec2.Vpc ec2_vpc_fb75c929
      tags:
        ~ Environment: "staging" → "production"
        - OldTag: "remove-me"
      # (3 unchanged attributes hidden)

Plan: 0 to add, 1 to change, 0 to destroy.
