carina-cli/src/snapshots/carina_cli__plan_snapshot_tests__snapshot_module_anonymous_resource.snap
---
source: carina-cli/src/plan_snapshot_tests.rs
expression: output
---
Execution Plan:

  + awscc.iam.Role bootstrap.role
      role_name: "carina-bootstrap"
        │
        └─ + awscc.iam.RolePolicy bootstrap.awscc_iam_role_policy_968c7070
              policy_name: "inline"
              role_name: "carina-bootstrap"

Plan: 2 to add, 0 to change, 0 to destroy.
