carina-cli/src/snapshots/carina_cli__plan_snapshot_tests__snapshot_module_constraint_plan_error.snap
---
source: carina-cli/src/plan_snapshot_tests.rs
assertion_line: 219
expression: error.to_string()
---
_virtual.c: module 'mod' (call 'c'): argument 'name': too long (got "abcd")
