carina-cli/src/snapshots/carina_cli__plan_snapshot_tests__snapshot_moved_claims_precede_heuristics.snap
---
source: carina-cli/src/plan_snapshot_tests.rs
expression: output
---
Execution Plan:

  -> awscc.test.Widget awscc_test_widget_58cf4fed (moved from: test_widget_11111111)

Plan: 0 to add, 0 to change, 0 to destroy, 1 to move.
