carina-cli/src/snapshots/carina_cli__plan_snapshot_tests__snapshot_moved_pure.snap
---
source: carina-cli/src/plan_snapshot_tests.rs
expression: output
---
Execution Plan:

  -> awscc.ec2.Vpc new_vpc (moved from: awscc.ec2.Vpc.old_vpc)

Plan: 0 to add, 0 to change, 0 to destroy, 1 to move.
