carina-cli/src/snapshots/carina_cli__plan_snapshot_tests__snapshot_nested_list_of_maps_all_dropped.snap
---
source: carina-cli/src/plan_snapshot_tests.rs
expression: output
---
Execution Plan:

  ~ awscc.ec2.Vpc vpc
      enable_dns_support: false → true
      # (2 unchanged attributes hidden)

Plan: 0 to add, 1 to change, 0 to destroy.
